@@ -1,6 +1,7 @@
 48
 ================
 
+14/03/24 Include additional fields with service json/xml_lost/found_animals
 14/03/24 clinic appointment types #1317
 14/03/24 Microchip registry checks should accept 9+10 digit too
 14/03/24 PetLink: Disable 15 digit validation rule when registering all
